--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "@nomiclabs/buidler-truffle5": "^1.0.1",
     "@nomiclabs/buidler-web3": "^1.0.1",
     "eth-ens-namehash": "^2.0.8",
-    "web3": "^1.2.2"
+    "web3": "1.2.2"
   }
 }
