--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "buidler compile",
-    "test": "buidler test"
+    "test": "buidler test --network buidlerevm"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/ajsantander/buidler-aragon-experiment#readme",
   "devDependencies": {
-    "@aragon/os": "^4.3.0",
+    "@aragon/os": "aragon/aragonOS#solidity5",
     "@aragon/test-helpers": "^2.1.0",
     "@nomiclabs/buidler": "^1.0.1",
     "@nomiclabs/buidler-truffle5": "^1.0.1",
