--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "web3": "^1.2.0"
   },
   "dependencies": {
+    "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.9",
+    "chai": "^4.2.0",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   }
