--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "@nomiclabs/buidler-truffle5": "^1.0.1",
     "@nomiclabs/buidler-web3": "^1.0.1",
     "eth-ens-namehash": "^2.0.8",
-    "web3": "^1.2.0"
-  },
-  "dependencies": {
+    "web3": "^1.2.0",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.9",
