--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@aragon/os": "aragon/aragonOS#solidity5",
     "@aragon/test-helpers": "^2.1.0",
     "@nomiclabs/buidler": "^1.0.1",
-    "@nomiclabs/buidler-truffle5": "^1.0.1",
-    "@nomiclabs/buidler-web3": "^1.0.1",
-    "eth-ens-namehash": "^2.0.8",
-    "web3": "^1.2.0",
+    "@nomiclabs/buidler-ethers": "^1.0.1",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.9",
     "chai": "^4.2.0",
+    "eth-ens-namehash": "^2.0.8",
+    "ethereum-waffle": "^2.1.0",
+    "ethers": "^4.0.39",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   }
